src/objects/Competitor_Product__c.object
<CustomObject>
    <description>Competitor Products object will contain competitor product from Morningstar and Evestment.</description>
    <fields>
        <fullName>Asset_Class_ID__c</fullName>
        <label>Asset Class ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Asset_Class__c</fullName>
        <label>Asset Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benchmark__c</fullName>
        <label>Benchmark</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CUSIP__c</fullName>
        <label>CUSIP</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Competitor_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field creates the relationship between competitor products and contacts</description>
        <label>Competitor Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Domicile__c</fullName>
        <label>Domicile</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Final_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Final Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Firm_ID__c</fullName>
        <label>Firm ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm_Name__c</fullName>
        <label>Firm Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Firm__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Firm</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Competitor Product</relationshipLabel>
        <relationshipName>Competitor_Product</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Fund_Legal_Name__c</fullName>
        <label>Fund Legal Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fund_Legal_Structure__c</fullName>
        <label>Fund Legal Structure</label>
        <picklist>
            <picklistValues>
                <fullName>Open Ended Investment Company</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ISIN__c</fullName>
        <label>ISIN</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_High_Interest_Product__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is High Interest Product</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Competitor_Products</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Portfolio_ID__c</fullName>
        <description>Unique identifier for external Integrations</description>
        <label>Portfolio ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <label>Portfolio Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <externalId>true</externalId>
        <label>Product ID</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sentiment__c</fullName>
        <description>This field will capture a contact&apos;s sentiment regarding a Competitor Product</description>
        <inlineHelpText>Use this field to keep track of a Contact&apos;s sentiment regarding a Competitor Product.</inlineHelpText>
        <label>Sentiment</label>
        <picklist>
            <picklistValues>
                <fullName>Currently Using- Not Pleased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Currently Using - Pleased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Using</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously Used - Not Pleased</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Previously Used- Pleased</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Share_Class_ID__c</fullName>
        <label>Share Class ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Class_Type__c</fullName>
        <label>Share Class Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Share_Class__c</fullName>
        <label>Share Class</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy_ID__c</fullName>
        <label>Strategy ID</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategy__c</fullName>
        <label>Strategy</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ticker__c</fullName>
        <label>Ticker</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Universe_Granularity__c</fullName>
        <label>Universe Granularity</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Vehicle_ID__c</fullName>
        <label>Vehicle ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle__c</fullName>
        <label>Vehicle</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Competitor Product</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Firm_ID__c</columns>
        <columns>Portfolio_ID__c</columns>
        <columns>Portfolio_Name__c</columns>
        <columns>Product_ID__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_1</fullName>
        <columns>NAME</columns>
        <columns>Asset_Class__c</columns>
        <columns>Asset_Class_ID__c</columns>
        <columns>Benchmark__c</columns>
        <columns>Competitor_Contact__c</columns>
        <columns>CUSIP__c</columns>
        <columns>Domicile__c</columns>
        <columns>Firm__c</columns>
        <columns>Firm_ID__c</columns>
        <columns>Firm_Name__c</columns>
        <columns>Fund_Legal_Name__c</columns>
        <columns>Fund_Legal_Structure__c</columns>
        <columns>ISIN__c</columns>
        <columns>Portfolio_ID__c</columns>
        <columns>Portfolio_Name__c</columns>
        <filterScope>Everything</filterScope>
        <label>All_1</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All_2</fullName>
        <columns>NAME</columns>
        <columns>Product_ID__c</columns>
        <columns>Sentiment__c</columns>
        <columns>Share_Class__c</columns>
        <columns>Share_Class_ID__c</columns>
        <columns>Share_Class_Type__c</columns>
        <columns>Strategy__c</columns>
        <columns>Strategy_ID__c</columns>
        <columns>Ticker__c</columns>
        <columns>Universe_Granularity__c</columns>
        <columns>Vehicle__c</columns>
        <columns>Vehicle_ID__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <columns>RECORDTYPE</columns>
        <filterScope>Everything</filterScope>
        <label>All_2</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>testing</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Product_ID__c</field>
            <operation>contains</operation>
            <value>665510_25002</value>
        </filters>
        <label>665510_25002</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Legal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Competitor Product</pluralLabel>
    <recordTypes>
        <fullName>Institutional</fullName>
        <active>true</active>
        <label>Institutional</label>
    </recordTypes>
    <recordTypes>
        <fullName>Retail</fullName>
        <active>true</active>
        <label>Retail</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
</CustomObject>